Ibrahim DEV/src/objects/Collaborateur__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Nom__c</fullName>
        <label>Nom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poste__c</fullName>
        <label>Poste</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prenom__c</fullName>
        <label>Prenom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Collaborateur</label>
    <nameField>
        <label>Collaborateur Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collaborateur</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>